[project]
name = "cartai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "litellm>=1.68.0",
]

[project.scripts]
cartai = "cartai.cli.main:app"

[dependency-groups]
lint = ["ruff<1.0.0,>=0.5.0"]
typecheck = ["mypy>=1.10"]
codespell = ["codespell<3.0.0,>=2.2.0"]
test = [
    "pytest>=8.3.4",
]
nb = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
]
