[project]
name = "cartai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "litellm>=1.68.0",
    "python-dotenv>=1.1.0",
    "pre-commit>=4.2.0",
]

[project.urls]
repository = "https://www.github.com/ContrastoAI/cartai"

[project.scripts]
cartai = "cartai.cli.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
lint = ["ruff<1.0.0,>=0.5.0", "mypy>=1.10"]
codespell = ["codespell<3.0.0,>=2.2.0"]
test = [
    "pytest>=8.3.4",
]
nb = [
    "ipykernel>=6.29.5",
]
